# cachepawl

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.claude/commands/: finish-task.md  init-pawl.md  plan-sprint.md  review-scope.md  start-task.md
.github/workflows/: ci.yml  publish.yml
.pawl/: README.md  migration-report.md  policy.yaml
.pawl/active/: CURRENT.md  DECISIONS.md  SPRINTS.md  TASKS.md
.pawl/archive/: README.md
.pawl/context/: DOMAIN_NOTES.md  PRODUCT_SCOPE.md  REPO_COMMANDS.md  TECHNICAL_SCOPE.md
.pawl/logs/: changelog.md
.pawl/templates/: decision.md  project.md  sprint.md  task.md
benchmarks/: README.md  dummy_cache_workload.py
benchmarks/configs/: rtx3060_12gb.yaml
benchmarks/scripts/: capture_vllm_baseline.py  capture_vllm_cache_plan_observation.py  capture_vllm_live_request_contract_observation.py  capture_vllm_mamba_attention_contract_observation.py  capture_vllm_planner_stage_observation.py  capture_vllm_runtime_cache_plan_observation.py  capture_vllm_runtime_contract_observation.py  compare_cache_planners.py  create_planner_comparison_pack.py  create_vllm_cache_diagnostic.py  create_vllm_mutation_readiness.py  create_vllm_planner_dry_run_probe.py  create_vllm_planner_stage_advisory_diff.py  run_cache_probe.py  run_vllm_path_c_advisory_matrix.py
docs/: architecture.md  design-rationale.md
docs/designs/: 0001-asymmetric-virtual-memory-paging.md  0002-dynamic-pool-rebalancing.md
docs/releases/: checklist-v0.x-advisory-alpha.md  readiness-v0.2.0a2.md  v0.x-path-c-observe-advisory.md
examples/: README.md
research/: gemini-research-en.md  gemini-research-vi.md
research/avmp/: AUDIT.md  Makefile  PHASE4_LOG.md  README.md  paper.tex
scripts/: check_version_consistency.py
src/cachepawl/: __init__.py  _version.py  cli.py
tests/: conftest.py
tests/bench/: __init__.py  test_environment.py  test_planner_baselines.py  test_planner_comparison.py  test_result_schema.py  test_synthetic_workloads.py  test_vllm_baseline_capture.py  test_vllm_cache_diagnostic.py  test_vllm_cache_plan_observation.py  test_vllm_live_request_contract_observation.py  test_vllm_mamba_attention_contract_observation.py  test_vllm_mutation_readiness.py  test_vllm_path_c_advisory_matrix.py  test_vllm_planner_dry_run_probe.py  test_vllm_planner_stage_advisory_diff.py  test_vllm_planner_stage_observation.py  test_vllm_runtime_cache_plan_observation.py  (+1 more)
(+419 files in other folders)
